# PhanDose

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli/: main.py  menus_cli.py  phantom_library_cli.py  utils_cli.py
cli/app_mode/: __main__.py  menus_cli.py  workspace_cli.py
cli/script_mode/: separate_modalities.py
cli/scripts/: separate_modalities.py
exec/: run_phandose.py
execs/: main.py
phandose/: NewDosi_20240124.py  __init__.py  constants.py  convert_segmentations_to_xyz.py  create_phantom.py  exceptions.py  filter_phantoms.py  patient_characteristics.py  phantom.py  utils.py  workspace.py
phandose/constants/: constants.py
phandose/conversions/: __init__.py  rtdose_conversions.py  rtstruct_conversions.py  scan_conversions.py
phandose/extend_scan/: Prog_6_CreatePhantom_AXEL_V00.py  scan_extension_director.py  scan_junction.py
phandose/extend_scan/scan_junction_builders/: scan_bottom_junction_builder.py  scan_junction_builder.py  scan_top_junction_builder.py
phandose/modalities/: __init__.py  ct_scan.py  ct_scan_modality.py  modality.py  modality_factory.py  pet_scan_modality.py  rtdose.py  rtdose_modality.py  rtplan.py  rtplan_modality.py  rtstruct.py  rtstruct_modality.py  scan_modalities.py  standalone_modalities.py
phandose/modalities/ct/: __init__.py  ct_scan_modality.py
phandose/modalities/pet/: __init__.py  pet_scan_modality.py
phandose/modalities/rtdose/: __init__.py  rtdose_modality.py
phandose/modalities/rtplan/: __init__.py  rtplan_modality.py
phandose/modalities/rtstruct/: __init__.py  rtstruct_modality.py
phandose/patient/: __init__.py  newdosi_mohammed.py  patient.py  patient_builder.py  patient_characteristics.py  patient_contours.py  patient_director.py  patient_factory.py  patient_segmentation.py  rtdose_to_coordinates.py  segmentations_to_coordinates.py
phandose/patient/builders/: __init__.py  patient_builder_interface.py
phandose/patient_hub/: __init__.py  patient_hub.py  patient_hub_loading_hander.py  patient_hub_save_visitor.py  patient_hub_storage_handler.py  patient_hub_visitor.py  patient_repository.py  storage_handler.py
phandose/patient_manager/: patient_manager.py
phandose/phantom/: create_phantom.py  filter_phantoms.py  phantom_library.py  phantom_utils.py
phandose/phantom_library/: phantom_library.py
phandose/utils/: __init__.py  dicom_metadata.py  dicom_to_dataframe.py  dicom_utils.py  logger.py
phandose/workspace/: workspace.py
tests/: test_patient_characteristics.py
tests/constants/: test_constants.py
tests/modalities/: test_modality.py  test_modality_factory.py  test_scan_modalities.py  test_standalone_modalities.py
tests/modalities/ct/: test_ct_scan_modality.py
tests/patient/: test_patient.py  test_patient_contours.py  test_segmentations_to_coordinates.py
